Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/Z2.out
Z2.java:13:11: compiler.err.default.allowed.in.intf.annotation.member
1 error
